removing fixed behavior for the gallery photos and adding top to the close button, when the navbar is open the X was behind

--- a/client/src/components/GalleryTrucks/styles.scss
+++ b/client/src/components/GalleryTrucks/styles.scss
@@ -11,7 +11,6 @@ body {
 }
 
 .css-1rbq2qy {
-    top: 70px !important;
     z-index: 3 !important;
 }
 
@@ -23,4 +22,8 @@ body {
     }
 
 
+}
+
+.react-images__header_button {
+    top: 80px;
 }
